<resources>
    <string name="app_name">DataStore</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_e_mail">Digite seu E-mail</string>
    <string name="login">Login</string>
    <string name="digite_sua_idade">Digite sua Idade</string>
    <string name="onde_voc_mora">Onde Você Mora?</string>
    <string name="qual_pais">Você vive em qual país?</string>
</resources>